--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,22 @@
 runtime: nodejs20
-service: default
+service: frontend
+
+handlers:
+  - url: /static
+    static_dir: static
+
+  - url: /
+    static_files: index.html
+    upload: index.html
+
+  - url: /script.js
+    static_files: script.js
+    upload: script.js
+
+  - url: /style.css
+    static_files: style.css
+    upload: style.css
+
+  - url: /.*
+    static_files: *.*
+    upload: *.*
