--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,10 @@ handlers:
     static_files: index.html
     upload: index.html
 
+  - url: /index.html
+    static_files: index.html
+    upload: index.html
+
   - url: /script.js
     static_files: script.js
     upload: script.js
